--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "live-server --port=8000 --https=https_config.js --no-browser"
+    "serve": "live-server --port=8000 --https=https_config.js --no-browser",
+    "build": "watchify platform.js -o bundle.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "live-server": "^1.0.0"
+    "browserify": "^13.0.1",
+    "live-server": "^1.0.0",
+    "watchify": "^3.7.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "annyang": "^2.4.0",
+    "snabbdom": "^0.5.0"
+  }
 }
