--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "annyang": "^2.4.0",
+    "fp-lib": "github:thurt/fp-lib",
+    "localforage": "^1.4.2",
     "snabbdom": "^0.5.0"
   }
 }
